Updated styles, added links, bug fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Matthew Howard</title>
-    <meta name="description" content="">
+    <meta name="description" content="Matthew Howard, student at the University of Pennsylvania">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="js/main.js"></script>
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,600italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header class="header">
@@ -34,7 +35,7 @@
       <h2>Hello</h2>
       <figure class="bio-figure"><div class="bio-image"></div></figure>
       <div class="content">
-        <p>My name is Matthew Howard (or just Matt). I’m currently a sophomore studying computer engineering with a minor in mathematics at the University of Pennsylvania. In my free time, I serve on the executive board of PennApps, one of the world’s largest hackathons. In particular, I oversee logistics and purchasing. I’m also a member of the Penn Glee Club and The Pennchants a cappella group. This spring, I’m a teaching assistant for CIS 240, "Intro to Computer Architecture".</p>
+        <p>My name is Matthew Howard (or just Matt). I’m currently a sophomore studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu">University of Pennsylvania</a>. In my free time, I serve on the executive board of <a href="http://pennapps.com">PennApps</a>, one of the world’s largest hackathons. In particular, I oversee logistics and purchasing. I’m also a member of the <a href="http://penngleeclub.com">Penn Glee Club</a> and <a href="http://pennchants.com">The Pennchants</a> a cappella group. This spring, I’m a teaching assistant for CIS 240, "Intro to Computer Architecture".</p>
         <p>I spent the last summer in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure. While there, I focused on mainframe administration, product testing, and web application development.</p>
         <p>Finally, I have a handful of other hobbies I use to fill in the cracks, including web design, photography, arranging music, and hiking.</p>
     </div>
@@ -48,7 +49,7 @@
     <section class="body-section last" id="contact">
       <h2>Contact</h2>
       <div class="content email">
-        Want to reach out for any reason? Your best bet is to send an email to <br/> hey (at) moward.com.
+        Want to reach out for any reason? Your best bet is to send an email to <br/> hey (at) matt.how.
     </div>
     </section>
 
