Fix Pennchants link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <article id="project-winwood">
           <header>
             <h3>Pennchants.com</h3>
-            <p>As part of my responsibilities as webmaster, I undertook the task of redesigning The Pennchants website to serve as the group's online presence. I chose  WordPress as a content management system because of its simplicity and extensive community support. I then designed a responsive theme based on <a href="http://themble.com/bones/">Bones</a>. See the site at <a href="pennchants.com" target="_blank">Pennchants.com</a>.
+            <p>As part of my responsibilities as webmaster, I undertook the task of redesigning The Pennchants website to serve as the group's online presence. I chose  WordPress as a content management system because of its simplicity and extensive community support. I then designed a responsive theme based on <a href="http://themble.com/bones/">Bones</a>. See the site at <a href="http://pennchants.com" target="_blank">Pennchants.com</a>.
           </header>
         </article>
     </div>
