Added DriveCoin, updated some dates and bio

--- a/index.html
+++ b/index.html
@@ -35,27 +35,36 @@
       <h2>Hello</h2>
       <figure class="bio-figure"><div class="bio-image"></div></figure>
       <div class="content">
-        <p>My name is Matthew Howard (or just Matt). I’m currently a rising junior studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a>. I'm currently working as a Software Developer Intern at <a href="http://epic.com" target="_blank">Epic Systems</a> in Verona, Wisconsin. In my free time, I serve as the Vice Director of <a href="http://pennapps.com" target="_blank">PennApps</a>, one of the world’s largest hackathons. I’m also a member of the <a href="http://penngleeclub.com" target="_blank">Penn Glee Club</a> and <a href="http://pennchants.com" target="_blank">The Pennchants</a> a cappella group. This past spring, I was a teaching assistant for CIS 240, "Intro to Computer Architecture".</p>
-        <p>I spent the last summer in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure. While there, I focused on mainframe administration, product testing, and web application development.</p>
+        <p>My name is Matthew Howard (or just Matt). I’m currently a junior studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a>. I'm also concurrently pursuing a Masters degree in Computer Science. In my free time, I serve as the Vice Director of <a href="http://pennapps.com" target="_blank">PennApps</a>, one of the world’s largest hackathons. I’m also a member of the <a href="http://penngleeclub.com" target="_blank">Penn Glee Club</a> and <a href="http://pennchants.com" target="_blank">The Pennchants</a> a cappella group. I'm also a teaching assistant for the second level introductory computer science course, CIS 120.</p>
+        <p>Last summer, (2015) I worked as a Software Developer Intern at <a href="http://epic.com" target="_blank">Epic Systems</a> in Verona, Wisconsin. I spent the summer before that (2014) in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure. While there, I focused on mainframe administration, product testing, and web application development.</p>
         <p>Finally, I have a handful of other hobbies I use to fill in the cracks, including web design, photography, arranging music, and hiking.</p>
     </div>
     </section>
     <section class="body-section" id="projects">
       <h2>Projects</h2>
       <div class="content">
+        <article id="drivecoin">
+          <header>
+            <h3>DriveCoin - A Space-based Cryptocurrency</h3>
+            <div class="subheading">Fall 2015</div>
+          </header>
+          <p>For our final project for CIS 556, Cryptography, my partner Ajay Patel and I designed and implemented a Cryptocurrency based on a Proof-of-Space primitive. It was challenging to design such a complicated system that works correctly and securely even in the presence of an adversary, but we created a simple proof-of-concept including a block chain, a wallet, and a peer-to-peer network in Python. You can read our report on the project <a href="/drivecoin.pdf" target="_blank">here</a> and find the source code for our implementation on <a href="https://github.com/moward/DriveCoin" target="_blank">GitHub</a>.</p>
+        </article>
         <article id="project-winwood">
           <header>
             <h3>Project Winwood - Self-Driving Vehicles</h3>
+            <div class="subheading">Spring 2015</div>
           </header>
           <p>I built Project Winwood for my final project for ESE 350, "Microcontrollers &amp; Embedded Systems", along with my partner Chris Champaigne. The project consists of self-driving vehicles, built largely from scratch, that receive waypoints via a web-based console and navigate autonomously. The robots are controlled by C code running on a Raspberry Pi 2 and includ components for sensor interfacing, data processing and localization, and closed loop drivetrain control. Much more information on the project can be found on our <a href="http://winwood.matt.how/" target="_blank">project blog</a>.</p>
         </article>
-        <article id="project-winwood">
+        <article id="pennchants-com">
           <header>
             <h3>Pennchants.com</h3>
+            <div class="subheading">Spring 2014</div>
             <p>As part of my responsibilities as webmaster, I undertook the task of redesigning The Pennchants website to serve as the group's online presence. I chose  WordPress as a content management system because of its simplicity and extensive community support. I then designed a responsive theme based on <a href="http://themble.com/bones/">Bones</a>. See the site at <a href="http://pennchants.com" target="_blank">Pennchants.com</a>.
           </header>
         </article>
-    </div>
+      </div>
     </section>
     <section class="body-section last" id="contact">
       <h2>Contact</h2>
