Added CliqueSolver and updated some dates

--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@
       <h2>Hello</h2>
       <figure class="bio-figure"><div class="bio-image"></div></figure>
       <div class="content">
-        <p>My name is Matthew Howard (or just Matt). I’m currently a rising senior studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a>. I'm also concurrently pursuing a Masters degree in Computer Science. I’m currently a member and board member of the <a href="http://penngleeclub.com" target="_blank">Penn Glee Club</a> and the Music Director of <a href="http://pennchants.com" target="_blank">The Pennchants</a> a cappella group. I'm also a teaching assistant for Computer Science courses and have previously taught CIS 120 and CIS 240. I previously helped run <a href="http://pennapps.com" target="_blank">PennApps</a>, the nation's largest college hackathon.</p>
-        <p>I'm currently working as a Software Engineer Intern for <a href="http://microsoft.com" target="_blank">Microsoft</a> in Cambridge, Massachessets. Last summer, (2015) I worked as a Software Developer Intern at <a href="http://epic.com" target="_blank">Epic Systems</a> in Verona, Wisconsin. I spent the summer before that (2014) in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure. While there, I focused on mainframe administration, product testing, and web application development.</p>
+        <p>My name is Matthew Howard (or just Matt). I’m a senior studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a>. I'm also concurrently pursuing a Masters degree in Computer Science. I’m currently a member and board member of the <a href="http://penngleeclub.com" target="_blank">Penn Glee Club</a> and the Music Director of <a href="http://pennchants.com" target="_blank">The Pennchants</a> a cappella group. I'm also a teaching assistant for Computer Science courses and have previously taught CIS 380, CIS 120, and CIS 240. I previously helped run <a href="http://pennapps.com" target="_blank">PennApps</a>, the nation's largest college hackathon.</p>
+        <p>Last summer, I worked as a Software Engineer Intern for <a href="http://microsoft.com" target="_blank">Microsoft</a> in Cambridge, Massachessets. In summer of 2015, I worked as a Software Developer Intern at <a href="http://epic.com" target="_blank">Epic Systems</a> in Verona, Wisconsin. I spent the summer before that in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure.</p>
         <p>Finally, I have a handful of other hobbies I use to fill in the cracks, including web design, photography, arranging music, and hiking.</p>
     </div>
     </section>
     <section class="body-section" id="projects">
       <h2>Projects</h2>
       <div class="content">
+        <article id="clique">
+          <header>
+            <h3>Constructing a Clique Solver from a Reduction to SAT</h3>
+            <div class="subheading">Fall 2016</div>
+          </header>
+          <p>I developed a solver for the NP-complete Clique Decision Problem using a reduction to SAT and the powerful and popular MiniSat SAT solver. You can read about the theory and analysis of the solver in the <a href="/clique.pdf" target="_blank">report</a> and find the source code on <a href="https://github.com/moward/CliqueSolver" target="_blank">GitHub</a>.</p>
+        </article>
         <article id="drivecoin">
           <header>
             <h3>DriveCoin - A Space-based Cryptocurrency</h3>
@@ -80,7 +87,7 @@
           <a href="http://linkedin.com/in/matthewshoward" title="LinkedIn" id="social-linkedin"><span></span></a>
         </div>
         <div class="copyright-notice">
-          &copy; 2016 Matthew Howard
+          &copy; 2017 Matthew Howard
         </div>
       </div>
     </footer>
