--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       <h2>Hello</h2>
       <figure class="bio-figure"><div class="bio-image"></div></figure>
       <div class="content">
-        <p>My name is Matthew Howard (or just Matt). I’m a senior studying computer engineering with a minor in mathematics at the <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a>. I'm also concurrently pursuing a Masters degree in Computer Science. I’m currently a member and board member of the <a href="http://penngleeclub.com" target="_blank">Penn Glee Club</a> and the Music Director of <a href="http://pennchants.com" target="_blank">The Pennchants</a> a cappella group. I'm also a teaching assistant for Computer Science courses and have previously taught CIS 380, CIS 120, and CIS 240. I previously helped run <a href="http://pennapps.com" target="_blank">PennApps</a>, the nation's largest college hackathon.</p>
-        <p>Last summer, I worked as a Software Engineer Intern for <a href="http://microsoft.com" target="_blank">Microsoft</a> in Cambridge, Massachessets. In summer of 2015, I worked as a Software Developer Intern at <a href="http://epic.com" target="_blank">Epic Systems</a> in Verona, Wisconsin. I spent the summer before that in Durham, NC working as an intern for IBM in Cloud and Smarter Infrastructure.</p>
-        <p>Finally, I have a handful of other hobbies I use to fill in the cracks, including web design, photography, arranging music, and hiking.</p>
+        <p>My name is Matthew Howard (or just Matt). I work as a software engineer for Microsoft in Cambridge, Massachusetts. I graduated in May 2017 from <a href="http://upenn.edu" target="_blank">University of Pennsylvania</a> with a Bachelor Degree in Computer Engineering and a Masters Degree in Computer Science. I previously helped run <a href="http://pennapps.com" target="_blank">PennApps</a>, the nation's largest college hackathon.</p>
+        <p>I have a handful of other hobbies I use to fill in the cracks, including web design, photography, guitar, singing, and hiking.</p>
     </div>
     </section>
     <section class="body-section" id="projects">
